Correct converting of CONSTANT_Float_info

--- a/docs/iceberg.css
+++ b/docs/iceberg.css
@@ -106,7 +106,7 @@ span {
 	font-family: monospace;
 	width: 50px;
 	padding-right: 5px;
-	border-right: 1px solid #aaaaaa
+	border-right: 1px solid #aaaaaa;
 }
 
 .cl {
