Try-catch examples

--- a/docs/iceberg.css
+++ b/docs/iceberg.css
@@ -127,3 +127,11 @@ span {
     padding-left: 2px;
     padding-right: 2px;
 }
+
+.exhandler {
+    background: #ffff00;
+}
+
+.extry {
+    background: #ff6781;
+}
