--- a/docs/iceberg.css
+++ b/docs/iceberg.css
@@ -101,3 +101,6 @@ span {
 .tblexvar {
   text-align: center; width: 900px;
 }
+.otherexm, .mainpage {
+  font-size: 24px; margin: 10px; margin-bottom: 20px;
+}
