--- a/docs/iceberg.css
+++ b/docs/iceberg.css
@@ -14,6 +14,9 @@ th {
 a {
   color: #0000ff; 
 }
+ol {
+  margin: 0px;
+}
 span {
   color: #000000; border-radius: 3px; padding-left: 5px; padding-right: 5px; border: 1px #bbbbbb solid; font-family: Courier;
 }
